Fix alignment of page-edit and page-infos in page header
[3.1.x]

ERM#17536

Please cherry-pick to master

--- a/resources/stylesheets/component/common/pageheader.page-infos.less
+++ b/resources/stylesheets/component/common/pageheader.page-infos.less
@@ -1,23 +1,39 @@
 .bs-page-info-element {
-	max-width: 50%;
+	max-width: 52%;
+	width: 100%;
+	line-height: 0.875em;
 
 	& > ul {
 		list-style:none;
 		margin-bottom: 0;
 		padding-left:0;
-		min-width: 100%;
+		max-width: 100%;
 		display: flex;
 		flex-wrap: wrap;
 		justify-content: flex-end;
 
 		& > li {
-			line-height: 1.1rem;
 			height: max-content;
+			max-width: 100%;
+			width: auto;
+			margin-left: 0.3125em;
+			margin-bottom: 0.625rem;
+
+			& > ul {
+				max-width: 100%;
+				padding-left: 0;
+				display: flex;
+				flex-wrap: wrap;
+				}
+			}
 		}
+
+	.bs-page-info-element-text-col {
+		display: block;
+		max-width: 95%;
 	}
 
-	.bs-page-info-element-button-col,
-	.bs-page-info-element-text-col {
+	.bs-page-info-element-button-col {
 		display: inline-block;
 	}
 
@@ -29,8 +45,8 @@
 			font-family: icomoon;
 			content: "\e9a6";
 			font-style: normal;
-			margin-right: 0.3125rem;
-			margin-left: 1rem;
+			margin-right: 0.3125em;
+			margin-left: 0;
 		}
 
 		&:hover,
@@ -67,8 +83,8 @@
 			&::before {
 				font-family: 'fontawesome';
 				content: "\f0d7";
-				margin-left: 0.1875rem;
-				margin-right: 0.1875rem;
+				margin-left: 0.1875em;
+				margin-right: 0.1875em;
 			}
 		}
 
@@ -82,10 +98,10 @@
 					a {
 						display: block;
 						width: 100%;
-						min-height: 1.875rem;
-						line-height: 1.875rem;
-						padding-left: 0.3125rem;
-						padding-right: 0.3125rem;
+						min-height: 1.875em;
+						line-height: 1.875em;
+						padding-left: 0.3125em;
+						padding-right: 0.3125em;
 
 						&:hover {
 							text-decoration: none;
@@ -97,7 +113,7 @@
 	}
 
 	.bs-page-watch {
-		min-width: 5rem;
+		min-width: 5em;
 
 		a {
 			color: @link-color;
